Working basic weather MVVM Clean archi

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".views.activities.WeatherActivity">
+  xmlns:app="http://schemas.android.com/apk/res-auto"
+  xmlns:tools="http://schemas.android.com/tools"
+  android:layout_width="match_parent"
+  android:layout_height="match_parent"
+  android:theme="@style/Theme.MaterialComponents.NoActionBar"
+  android:scaleType="centerCrop"
+  tools:context=".views.activities.WeatherActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+  <RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
+
+    <ImageView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_alignParentTop="true"
+      android:scaleType="centerCrop"
+      android:src="@drawable/ic_night"/>
+
+  </RelativeLayout>
+
+  <TextView
+    android:id="@+id/weather_temperature"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="56dp"
+    android:layout_marginStart="52dp"
+    android:textColor="#FFFFFF"
+    android:textSize="72sp"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    tools:text="12°C" />
+
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/data_recyclerview"
+    android:layout_width="0dp"
+    android:layout_height="200dp"
+    android:layout_marginBottom="1dp"
+    android:layout_marginStart="1dp"
+    android:layout_marginEnd="1dp"
+    android:orientation="horizontal"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    tools:listitem="@layout/weatherdetail_list" />
+
+  <ImageView
+    android:id="@+id/pin"
+    android:layout_width="25dp"
+    android:layout_height="25dp"
+    android:layout_marginTop="32dp"
+    android:layout_marginStart="32dp"
+    android:layout_marginEnd="8dp"
+    app:layout_constraintEnd_toStartOf="@+id/pin_localisation"
+    app:layout_constraintHorizontal_bias="1.0"
+    app:layout_constraintStart_toEndOf="@+id/weather_temperature"
+    app:layout_constraintTop_toTopOf="parent"
+    app:srcCompat="@drawable/ic_pin" />
+
+  <TextView
+    android:id="@+id/pin_localisation"
+    android:textStyle="bold"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="32dp"
+    android:text="PARIS"
+    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+    android:textSize="30sp"
+    app:layout_constraintBottom_toBottomOf="@+id/pin"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="@+id/pin" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
